<resources>
    <string name="action_logout">Desconectar</string>
    <string name="action_settings">Configurações</string>
    <string name="anunciante">Anunciante</string>
    <string name="anuncios">Anúncios</string>
    <string name="anuncios_ativos">Ativos</string>
    <string name="anuncios_finalizados">Finalizados</string>
    <string name="app_name">FreelaSearch</string>
    <string name="avaliar">Avaliar</string>
    <string name="cadastrar">Cadastrar-se</string>
    <string name="cancelar_inscricao">Cancelar Inscrição</string>
    <string name="conectar">Conectar-se</string>
    <string name="conectar_facebook">Conectar-se pelo Facebook</string>
    <string name="configuracoes">Configurações</string>
    <string name="contratacoes">Contratações</string>
    <string name="criar_conta">Criar Conta</string>
    <string name="dashboard">Dashboard</string>
    <string name="deseja_cadastrar">Ainda não possui uma conta? Cadastre-se.</string>
    <string name="deslogar_facebook">Desconectar-se do Facebook</string>
    <string name="dummy_button">Dummy Botão</string>
    <string name="dummy_content">DUMMY\nCONTEÚDO</string>
    <string name="email">Email</string>
    <string name="escolher_perfil">Escolher Perfil</string>
    <string name="esqueceu_senha">Esqueceu sua senha?</string>
    <string name="facebook_app_id">1242449602450447</string>
    <string name="freelancer">Freelancer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inscrever_se">Inscrever-se</string>
    <string name="ja_cadastrado">Já é cadastrado? Conecte-se.</string>
    <string name="location">Localização (Opcional)</string>
    <string name="logout">Logout</string>
    <string name="mensagens">Mensagens</string>
    <string name="meus_anuncios">Meus Anúncios</string>
    <string name="minhas_inscricoes">Minhas Inscrições</string>
    <string name="navigation_drawer_open">Abrir Navigation Drawer</string>
    <string name="navigation_drawer_close">Fechar </string>
    <string name="nenhum_anuncio_encontrado">Nenhum anúncio foi encontrado.</string>
    <string name="nome">Nome</string>
    <string name="required_fields">Campo(s) obrigatório(s) não preenchido(s).</string>
    <string name="resetar_senha">Resetar senha</string>
    <string name="senha">Senha</string>
    <string name="search_title">Pesquisar</string>
    <string name="search_hint">Pesquisar Vagas</string>
    <string name="title_activity_lista_categoria">Lista Categoria</string>
    <string name="title_activity_cadastro_usuario">Cadastro de Usuário</string>
    <string name="title_activity_teste">TesteActivity</string>
    <string name="title_activity_perfis">Perfis Activity</string>
    <string name="title_activity_main">Main Activity</string>
    <string name="title_gallery_fragment">Galeria de Fotos</string>
    <string name="title_main_fragment">Dashboard</string>
    <string name="title_tab_fragment">Anúncios</string>
    <string name="title_activity_settings">Configurações</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
