<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_home_24dp"
            android:tint="@color/icons"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/nav_escolher_perfil"
            android:icon="@drawable/ic_account_circle_24dp"
            android:tint="@color/icons"
            android:title="@string/escolher_perfil" />
        <item
            android:id="@+id/nav_anuncios"
            android:icon="@drawable/ic_dashboard_24dp"
            android:tint="@color/icons"
            android:title="@string/anuncios" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_24dp"
            android:tint="@color/icons"
            android:title="@string/configuracoes" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_settings_power_24dp"
            android:tint="@color/icons"
            android:title="@string/logout" />
    </group>
</menu>
