<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:fillViewport="false">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"

        tools:context="org.freelasearch.activities.WelcomeActivity">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="65dp"
            android:adjustViewBounds="true"
            android:src="@drawable/logo_white"
            android:visibility="visible" />

        <com.facebook.login.widget.LoginButton xmlns:fb="http://schemas.android.com/apk/res-auto"
            android:id="@+id/lbFacebook"
            style="@style/FacebookLoginButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/ivLogo"
            android:textColor="@android:color/white"
            fb:com_facebook_login_text="@string/conectar_facebook"
            fb:com_facebook_logout_text="@string/deslogar_facebook" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/lbFacebook"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_marginTop="25dp"
                android:layout_weight="1"
                android:background="#4bffffff"
                android:onClick="abrirLoginActivity"
                android:text="@string/conectar"
                android:textAllCaps="true"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btnCriarConta"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="25dp"
                android:layout_weight="1"
                android:background="#4bffffff"
                android:onClick="abrirSignupActivity"
                android:text="@string/cadastrar"
                android:textAllCaps="true"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvResetarSenha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/linearLayout"
            android:layout_marginTop="18dp"
            android:onClick="abrirResetPasswordActivity"
            android:text="@string/esqueceu_senha"
            android:textColor="@android:color/white"
            android:textSize="14dp" />

    </RelativeLayout>
</ScrollView>